tests/ui/parser/attribute/attribute-with-no-generics-in-parameter-list.rs
fn foo<#[attr]>() {} //~ ERROR attribute without generic parameters

fn main() {}
